--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "formik": "^2.4.6",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
